fixed margin error with success page button overlapping pic

--- a/skycitybank/src/App.css
+++ b/skycitybank/src/App.css
@@ -97,7 +97,8 @@
 #button {
   margin-top: -6px;
 }
-#buttonSuccess {
+
+#successButton {
   margin-top: 30px;
 }
 #valueBusiness {
